Improvements and API changes in version 2.2.4 (To Come)

1. Soot is now able to infer a main-class if no main-class attribute is given.
2. soot.jimple.toolkits.annotation.nullcheck.BranchedRefVarsAnalysis has been deprecated
   and replaced by soot.jimple.toolkits.annotation.nullcheck.NullnessAnalysis.
3. Added EXPERIMENTAL transactions/lock allocation code, including
	- may-happen-in-parallel analysis
	- interprocedural information flow analysis
	- thread-local objects analysis
	- thread-based side effect analysis

Improvements in version 2.2.3 (Sat, Mar 18, 2006)

1. Dava:
    - Handling invocation of parent constructor and other constructors within
    a constructor
    - DeInlining final static fields.
    - Ensuring initialization of all final fields
    - Using copy propagation to remove un-necessary copy stmts
    
2. many bug fixes and improvements for Dava

3. many bug fixes and improvements for Java To Jimple 

Improvements in version 2.2.2

Improvements in version 2.2.1 (Mon, Jan 3, 2005)

1. update Soot - Eclipse plugin to work with Eclipse versions 3.x

Improvements in version 2.2 (Fri, Dec 17, 2004)

1. changes to class resolution see: http://svn.sable.mcgill.ca/wiki/index.php/ClassResolver
2. major reorganization of control flow graphs and extended support for exception control flow see: http://svn.sable.mcgill.ca/wiki/index.php/CFG%20Reorganization
3. complete and stable JavaToJimple module
4. Java 1.4 sytle handling of method and field references see: http://svn.sable.mcgill.ca/wiki/index.php/MethodAndFieldReferences
5. minor fixes and cleanup of Shimple
   * made dominator analysis and structure classes public
   * Shimple factory added for finer grained control
6. updates to Soot - Eclipse Plugin
   * improved visual attributes in source
   * attributes legend
   * attribute management (for turning sets of attributes on/off)
   * interactive cfgs see:
   * growable graphical callgraph (experimental)