@@ -1,4 +1,12 @@
-Improvements and API changes in version 2.2.4 (To Come)
+Improvements and API changes in version 2.2.5 (To come)
+
+1. Soot now has an option to prepend the classpath given on the command line to the default classpath.
+   See the documentation on the option -pp for details.
+2. Included Manu Shridharan's demand-driven points-to analysis.
+   See http://doi.acm.org/10.1145/1133255.1134027 for details.
+   It can be activated via: -p cg.spark cs-demand:true    
+
+Improvements and API changes in version 2.2.4
 
 1. Soot is now able to infer a main-class if no main-class attribute is given.
 2. soot.jimple.toolkits.annotation.nullcheck.BranchedRefVarsAnalysis has been deprecated
